--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/SRFMDB?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root0420
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
