--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/SRFMDB?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://101.37.173.235:3306/SRFMDB?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/SRFMDB?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://101.37.173.235:3306/SRFMDB?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 spring.datasource.username=root
 #spring.datasource.password=''
-spring.datasource.password=root
+spring.datasource.password=Root@0420
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
