--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
             <version>1.7.2</version>
         </dependency>
 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.2</version>
         </dependency>
-
+-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -129,11 +129,11 @@
             <version>1.4.0</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.crazycake</groupId>
             <artifactId>shiro-redis</artifactId>
             <version>2.4.2.1-RELEASE</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.github.theborakompanioni</groupId>
             <artifactId>thymeleaf-extras-shiro</artifactId>
